Changes for 1.5:

 - [DEV-66] added sorting to screens (Artem)
 - The last character for last value is unreadable (Sasha)
 - [DEV-60] added availability of setting hosts view style in overview (Artem)
 - [DEV-53] added different style for dependent triggers in "Status of triggers" (Artem)
 - [DEV-62] added availability to select all hosts in "Availability report" (Artem)
 - [DEV-75] Empty command result window (Sasha)
 - [DEV-74] Scripts of all nodes are displayed (Sasha)
 - [DEV-54] added zoom for graphs (Artem)
 - [DEV-48] Support of Ping and Traceroute in Status of Triggers screen (Sasha)
 - [DEV-57] added better "hosts info" selection in screens (Artem)
 - [DEV-56] added better item selection in screens (Artem)
 - [DEV-48] added scripts form,scripts list, script call menu (Artem)
 - [DEV-44] more flexible generation of trigger events (Alexei)
 - [DEV-45] added new design of Status of Triggers (Artem)
 - [DEV-47] added support of selection of events and bulk acknowledge of events (Artem)
 - [DEV-1] added new graph bar (Artem)
 - support of database cache for history and trends (Alexei)
 - basic support of database caching (Alexei)
 - added pie graphs (Artem)
 - added new columns graphs.show_legend, graphs.show_3d (Alexei)
 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.3:

 - [ZBX-176] fixed static compilation of Jabber support (Alexei)
 - [ZBX-100] fixed Oracle compilation errors (Alexei)
 - [ZBX-159] added support of vm.memory.size[available] under Linux (Alexei)
 - [ZBX-172] fixed incorrect SQL caused by character ' in item key (Alexei)
 - [ZBX-106] support of 16 processors for system.cpu.util[], other fixes (Alexei)