@@ -459,6 +459,18 @@ if(isset($DB_TYPE) && $DB_TYPE == "ORACLE") {
 				return 'CONCAT('.implode(',',$params).')';
 		}
 	}
+	
+	function zbx_sql_mod($x,$y){
+		global $DB_TYPE;
+
+		switch($DB_TYPE)
+		{
+			case "SQLITE3":
+				return ' ('.$x.' %% '.$y.')';
+			default:
+				return ' MOD('.$x.','.$y.')';
+		}
+	}
 
 	function DBid2nodeid($id_name)
 	{
